# buildkube

./: BUILD.googleapis  Makefile  README.md  WORKSPACE  bazelrc  dependencies.yaml
barn/: BUILD.bazel  Makefile  README.md  workspace.bzl
barn/k8s/: BUILD.bazel  namespace.yaml
barn/redis/: BUILD.bazel  structure-tests.yaml
barn/redis/k8s/: BUILD.bazel  master.yaml  sentinel.yaml  service.yaml
barn/remote-cache/k8s/: BUILD.bazel  deploy.yaml  service.yaml
barn/scheduler/: BUILD.bazel  structure-tests.yaml
barn/scheduler/k8s/: BUILD.bazel  deploy.yaml  service.yaml
barn/server/: BUILD.bazel  structure-tests.yaml
barn/server/k8s/: BUILD.bazel  configmap.yaml  deploy.yaml  service.yaml
barn/worker/: BUILD.bazel  structure-tests.yaml
barn/worker/k8s/: BUILD.bazel  deploy.yaml
farm/: BUILD.bazel  Makefile  local_repository.bzl  workspace.bzl
farm/k8s/: BUILD.bazel  namespace.yaml
farm/server/: BUILD.bazel  server.config  server.config.master  structure-tests.yaml
farm/server/k8s/: BUILD.bazel  deploy.yaml  service.yaml
farm/worker/: BUILD.bazel  structure-tests.yaml  worker.config  worker.config.master
farm/worker/k8s/: BUILD.bazel  deploy.yaml
grid/: Makefile  README.md  structure-tests.yaml  workspace.bzl
grid/k8s/: namespace.yaml
grid/server/: BUILD.bazel  latest.bazelrc  server.conf  structure-tests.yaml
grid/server/k8s/: BUILD.bazel  deploy.yaml  service.yaml
grid/worker/: BUILD.bazel  Dockerfile  structure-tests.yaml  worker.conf
grid/worker/k8s/: BUILD.bazel  deploy.yaml
rbe/: Makefile
server/: BUILD.bazel  server.config
server/k8s/: BUILD.bazel  deploy.yaml  svc.yaml
worker/: BUILD.bazel
worker/k8s/: BUILD.bazel  deploy.yaml
