load("@io_bazel_rules_docker//container:image.bzl", "container_image")

container_image(
    name = "image",
    base = "@com_github_stackb_distroless_bazel//:bazel_0.14.1",
    entrypoint = ["/usr/bin/java", "-jar"],
    cmd = [
        "buildfarm-worker_deploy.jar",
        "--server_host_env",
        "BUILDKUBE_SERVER_SERVICE_HOST",
        "--server_port_env",
        "BUILDKUBE_SERVER_SERVICE_PORT",
        "/worker.config",
    ],
    files = [
        "worker.config",
        "@build_buildfarm//src/main/java/build/buildfarm:buildfarm-worker_deploy.jar",
    ],
    visibility = ["//worker:__subpackages__"],
)
