load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

k8s_deploy(
    name = "namespace",
    template = "namespace.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":namespace",
    ],
    visibility = ["//visibility:public"],
)
