load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")

go_binary(
    name = "scheduler",
    goos = "linux",
    goarch = "amd64",
    pure = "on",
    embed = ["@buildbarn//cmd/bbb_scheduler:go_default_library"],
)

go_image(
    name = "image",
    binary = ":scheduler",
    visibility = ["//barn/scheduler:__subpackages__"],
)

container_test(
    name = "structure",
    image = ":image",
    configs = [
        "structure-tests.yaml",
    ],
    size = "small",
)
