load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")

go_binary(
    name = "worker",
    goos = "linux",
    goarch = "amd64",
    pure = "on",
    embed = ["@buildbarn//cmd/bbb_worker:go_default_library"],
)

go_image(
    name = "image",
    base = "@rbe_ubuntu//image",
    binary = ":worker",
    visibility = ["//barn/worker:__subpackages__"],
)

container_test(
    name = "structure",
    image = ":image",
    configs = [
        "structure-tests.yaml",
    ],
    size = "small",
)
