load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")

container_image(
    name = "image",
    base = "@java_image_base//image",
    cmd = [
        "/server.jar",
        "/server.config.master",
    ],
    files = [
        "server.config.master",
        "@buildfarm//:server",
    ],
    ports = [
        "8098",
    ],
    visibility = ["//farm/server:__subpackages__"],
)

container_test(
    name = "structure",
    image = ":image",
    configs = [
        "structure-tests.yaml",
    ],
    size = "small",
)
