load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")

container_image(
    name = "image",
    base = "@java_image_base//image",
    cmd = [
        "/buildfarm-server_deploy.jar",
        "/server.config",
    ],
    files = [
        "server.config",
        "@build_buildfarm//:server",

        # Use this one in conjunction with local_repository.bzl
        #"@build_buildfarm//src/main/java/build/buildfarm:buildfarm-server_deploy.jar",
    ],
    ports = [
        "8980",
    ],
    visibility = ["//farm/server:__subpackages__"],
)

container_test(
    name = "structure",
    image = ":image",
    configs = [
        "structure-tests.yaml",
    ],
    size = "small",
)
