load("@io_bazel_rules_docker//container:image.bzl", "container_image")

container_image(
    name = "image",
    base = "@com_github_stackb_distroless_bazel//:bazel_0.14.1",
    entrypoint = ["/usr/bin/java", "-jar"],
    cmd = [
        "buildfarm-worker_deploy.jar",        
        "/worker.config.master",
    ],
    files = [
        "worker.config.master",
        "@build_buildfarm//src/main/java/build/buildfarm:buildfarm-worker_deploy.jar",
    ],
    visibility = ["//farm/worker:__subpackages__"],
)
