load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")

# Export the dockerfile so that the repository rule can consume it
exports_files(["Dockerfile"])

container_image(
    name = "image",
    base = "@buildgrid_worker//image",
    entrypoint = ["/root/.local/bin/bgd"],
    cmd = ["bot", "--remote=http://buildgrid-server:50051", "--parent=main", "host-tools"],
    workdir = "/app",
    visibility = ["//grid/worker:__subpackages__"],
)

container_test(
    name = "structure",
    image = ":image",
    configs = [
        "//grid:structure-tests",
        "structure-tests.yaml",
    ],
    size = "small",
)
