load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

k8s_deploy(
    name = "master",
    template = "master.yaml",
)

k8s_deploy(
    name = "sentinel",
    template = "sentinel.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":master",
        ":sentinel",
    ],
    visibility = ["//visibility:public"],
)
