load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

k8s_deploy(
    name = "svc",
    template = "svc.yaml",
)

k8s_deploy(
    name = "deploy",
    images = {
        "gcr.io/stack-build/buildkube-server:latest": "//farm/server:image",
    },
    template = "deploy.yaml",
)

k8s_objects(
    name = "k8s",
    objects = [
        ":svc",
        ":deploy",
    ],
    visibility = ["//visibility:public"],
)
